--- a/index.html
+++ b/index.html
@@ -5,7 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast App</title>
     <link rel="stylesheet" href="index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600&display=swap" rel="stylesheet">
     <script src="index.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+        <div class="logo">
+            <img src="icons/logo.png" alt="Weather logo">
+        </div>
+
+        <form action="#">
+            <input type="text" name="search" autocomplete="off" id="search-box" placeholder="Enter city">
+            <input type="submit" value="Search">
+        </form>
+
+        <div class="toggleButton">
+            <button class="toggle"><sup class="sup">0</sup>C</button>
+        </div>
+    </header>
+
+    <!-- main container -->
+    <div class="container">
+        <section class="city-info">
+            <h1 class="city-name"></h1>
+            <h2 class="date-info"></h2>
+        </section>
+        <section class="current">
+             
+            <img src="" alt="" class="condition-icon">
+            <div class="condition-text"></div>
+        </section>
+        <section class="temperature-data">
+            <div class="temperature"></div>
+        </section>
+        <h3 class="title-hour">Hour Forecast: time | temp</h3>
+        <section class="hour-forecast">             
+        </section>
+    </div>
+
+    <!-- footer -->
+    <footer class="footer">
+        <p>Powered by <a href="https://www.weatherapi.com/signup.aspx" target="_blank">Weatherapi.com</a></p>
+    </footer>
+    <!-- <input type="color" name="" id=""> -->
+     <!-- <div class="loader"></div> -->
+  </body>
 </html>
