Added loader while page is being fetched

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
         <div class="logo">
-            <img src="icons/logo.png" alt="Weather logo">
+            <img src="icons/logo.png" id="logo" alt="Weather logo">
         </div>
 
         <form action="#">
@@ -45,11 +45,11 @@
         </section>
     </div>
 
+    <div class="loader"></div>
+
     <!-- footer -->
     <footer class="footer">
         <p>Powered by <a href="https://www.weatherapi.com/signup.aspx" target="_blank">Weatherapi.com</a></p>
     </footer>
-    <!-- <input type="color" name="" id=""> -->
-     <!-- <div class="loader"></div> -->
   </body>
 </html>
